# pico-navigation

./: .gitignore  CMakeLists.txt  CMakeLists_pico.txt  README.md  tcp_wokwi.py
build_pico/: CMakeCache.txt  Makefile  agrobot.elf  agrobot.hex  agrobot.uf2  cmake_install.cmake  compile_commands.json
build_pico/elf2uf2/: CMakeCache.txt  Makefile  elf2uf2
build_pico/elf2uf2/tmp/: ELF2UF2Build-cfgcmd.txt
build_pico/pico-sdk/: Makefile  cmake_install.cmake
build_pico/pico-sdk/docs/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/boot_picoboot/: Makefile
build_pico/pico-sdk/src/common/boot_uf2/: cmake_install.cmake
build_pico/pico-sdk/src/common/pico_base/: Makefile
build_pico/pico-sdk/src/common/pico_divider/: Makefile
build_pico/pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/pico_sync/: cmake_install.cmake
build_pico/pico-sdk/src/common/pico_usb_reset_interface/: Makefile
build_pico/pico-sdk/src/common/pico_util/: Makefile
build_pico/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2040/hardware_structs/: Makefile
build_pico/pico-sdk/src/rp2_common/: cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/boot_stage2/: bs2_default.dis  bs2_default.elf.map  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_adc/: Makefile
build_pico/pico-sdk/src/rp2_common/hardware_base/: cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_claim/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_clocks/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_divider/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_dma/: cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_exception/: Makefile
build_pico/pico-sdk/src/rp2_common/hardware_flash/: Makefile
build_pico/pico-sdk/src/rp2_common/hardware_i2c/: Makefile
build_pico/pico-sdk/src/rp2_common/hardware_irq/: Makefile
build_pico/pico-sdk/src/rp2_common/hardware_pio/: cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_pll/: Makefile
build_pico/pico-sdk/src/rp2_common/hardware_pwm/: Makefile
build_pico/pico-sdk/src/rp2_common/hardware_resets/: cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_rtc/: Makefile  cmake_install.cmake
build_pico/pioasm/: CMakeCache.txt  cmake_install.cmake  pioasm
include/: functions.h
src/: agrobot.cpp  agrobot.py  functions.cpp  teleop.py  test.cpp  test.py
wokwi_sim/: diagram.json  wokwi.toml
(+54 files in other folders)
